k8s-sidecar-injector/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "k8s-sidecar-injector-prod"
  namespace: "appdynamics"
  labels:
    k8s-app: "k8s-sidecar-injector"
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: "k8s-sidecar-injector"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        k8s-app: "k8s-sidecar-injector"
    spec:
      serviceAccountName: k8s-sidecar-injector
      volumes:
      - name: secrets
        secret:
          secretName: appd-tls
      containers:
      - name: "k8s-sidecar-injector"
        imagePullPolicy: Always
        image: tumblr/k8s-sidecar-injector:latest
        command: ["entrypoint.sh"]
        args: []
        ports:
        - name: https
          containerPort: 9443
        - name: http-metrics
          containerPort: 9000
        volumeMounts:
        - name: secrets
          mountPath: /var/lib/secrets
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /health
            port: https
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: "0.5"
            memory: 1Gi
          limits:
            cpu: "0.5"
            memory: 2Gi
