k8s-sidecar-injector/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: "tumblr-sidecar-injector-webhook"
  labels:
    app: k8s-sidecar-injector
webhooks:
- name: "injector.tumblr.com"
  failurePolicy: "Ignore" # we fail "open" if the webhook is down hard
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  clientConfig:
    # https://github.com/kubernetes/kubernetes/blob/v1.10.0-beta.1/staging/src/k8s.io/api/admissionregistration/v1beta1/types.go#L218
    # note: k8s is smart enough to use 443 or the only exposed port on the service
    # note: this requires the service to serve TLS directly (not thru ingress)
    service:
      name: "k8s-sidecar-injector-prod"
      namespace: "appdynamics"
      path: "/mutate"   # what /url/slug to send requests at
    # See README.md for how this was generated!
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURORENDQWh5Z0F3SUJBZ0lVUWlaOVQ4c0ZtSDArdzgvRDJmd2NkeTdtYUVzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VqRVFNQTRHQTFVRUF3d0hRWEJ3UkMxRFFUQWVGdzB5TURBMU1qUXlNekF5TVRSYUZ3MHpNREExTWpJeQpNekF5TVRSYU1CSXhFREFPQmdOVkJBTU1CMEZ3Y0VRdFEwRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCCkR3QXdnZ0VLQW9JQkFRQ29TZ3BuU0MzcC8xZG5BK3pOS3NpV1ZrVnFsUldmMThSalc0dGY1SHJwTlhVeFNVT2oKN0FjS3pWbHAxbEQySExRUlp2SlJmMXJ2VzVtazlXOWRSTzJycjE1UUJZWHlUNkthVTNCeDRDMWJVVS9YUVdnYQozbWRFYWEvLytXN [...]
